# opp

./: .gitignore
lab1/: CMakeLists.txt  runner.sh
lab1/src/: CMakeLists.txt  config.h  input.txt  main.c  solver.c  solver.h
lab1/src/include/: io_utils.h  logger.h  matrix.h
lab1/src/matrix/: CMakeLists.txt  lin_solver.c  lin_solver.h  matrix.c  matrix.h  solver.c  solver.h
lab1/src/solver/: CMakeLists.txt  lin_solver.c  lin_solver.h  mpi_solver.c  mpi_solver.h  multy_solver.c  single_solver.c  solver.c  solver.h  solver_math.c  solver_math.h  solver_mpi.c  solver_single.c  utils.c  utils.h
lab1/src/solver/mpi_solvers/: mpi_solver.h  mpi_solver_comm.c  mpi_solver_split.c  split_tasks.c  split_tasks.h
lab1/src/utils/: CMakeLists.txt  i_reader.c  i_reader.h  io_utils.c  io_utils.h  logger.c
lab1/tests/: CMakeLists.txt  tests.cpp
lab2/: CMakeLists.txt  RunThreads.sh  config.h  main1.c  main2.c  parallel1.cpp  parallel2.cpp  runner.sh  sequential2.cpp
lab2/utils/: io_utils.c  matrix.h
lab3/: bash.sh  gen.py  main.c
lab4/: CMakeLists.txt  config.h  main.cpp  task.cpp  task.h
lab5/: main.cpp  run.sh
